--- a/index.html
+++ b/index.html
@@ -61,5 +61,11 @@
     </section>
   </main>
 </div>
+
+<footer>
+  Feito com  
+  <img src="/assets/heart.svg" alt="heart">
+  por Luanderson
+</footer>
 </body>
 </html>
