--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div id="page">
-  <img src="/assets/main-image.jpg" alt="Imagem de um cupcake com grãos de café e chantilly">
+  <img src="assets/main-image.jpg" alt="imagem-de-um-cupcake-com-grãos-de-café-e-chantilly">
   <main>
     <section id="about">
       <h1>Cupcake de café com chantilly</h1>
@@ -64,7 +64,7 @@
 
 <footer>
   Feito com  
-  <img src="/assets/heart.svg" alt="heart">
+  <img src="assets/heart.svg" alt="heart">
   por Luanderson
 </footer>
 </body>
