--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div id="page">
-  <img src="assets/main-image.jpg" alt="imagem-de-um-cupcake-com-grãos-de-café-e-chantilly">
+  <img src="assets/main-image.jpg" alt="imagem-de-um-cupcake-com-graos-de-cafe-e-chantilly">
   <main>
     <section id="about">
       <h1>Cupcake de café com chantilly</h1>
